# aiuibuilder-grway

./: .gitattributes  .gitignore  .gitmodules  config.ini  grway.aicpro  grway.snapshot  simulator.code-workspace
data/: param_data.db
package/: .clang-format  CMakeLists.txt
package/FlashDB-1.1.2/inc/: fdb_cfg.h
package/FlashDB-1.1.2/src/: fdb_kvdb.c  fdb_tsdb.c
package/bsp/inc/: board.h  port.h  selectport.h  uart.h
package/bsp/src/: board.c  bsp_ini.c  port.c  selectport.c  uart.c
package/mach/inc/: machine.h  sensor.h
package/mach/src/: machine.c
package/rt-thread/: CMakeLists.txt
package/rt-thread-grway/: CMakeLists.txt
package/rt-thread-grway/include/: rtdef.h  rtthread.h
package/rt-thread-grway/src/: thread.c
package/rt-thread/include/: rtconfig.h
resources/PSD/: 2_设置界面.psd  4_参数设置.psb  故障警告.psb  输入密码.psb  首页.psb
resources/image/icon/02_首页图标和小图标/: 02.icl  Thumbs.db
resources/image/icon/图片/: 2_设置界面.psd  3_系统参数.psd  4_历史故障.psd  5_系统框图.psd  6_系统框图.psd  9 拷贝.psd  数值设置.psd  模式弹窗.psd  模式弹窗按钮.psd  模式按钮.psd  首页.psb  首页小图标 - 复制.psb  首页小图标.psb
script/lib/: README.MD
script/patch/: CMakeLists.txt
script/patch/simulator/: CMakeLists.txt
simulator/: aic_ui.h  main.c
simulator/ffmpeg/share/ffmpeg/: ffprobe.xsd
ui_builder/: aic_lang.c  aic_lang.h  font_list.c  font_list.h  lv_conf_custom.h  screen_0_fulldisp.c  screen_1_main.c  screen_2_menu.c  screen_3_status.c  screen_4_param.c  screen_5_keyboard_n.c  screen_6_curerr.c  screen_7_hiserr.c  screen_8_hiserr_detail.c  ui_init.c  ui_init.h  ui_objects.h  ui_util.c  ui_util.h
ui_builder/custom/: custom.c
ui_builder/custom/grway/compose/: SConscript  cpo_curerr_list.c  cpo_curerr_list.h  cpo_hiserr_detail.c  cpo_hiserr_detail.h  cpo_hiserr_list.c  cpo_hiserr_list.h  (+6 more)
(+44 files in other folders)
